--- a/src/pages/listings.html
+++ b/src/pages/listings.html
@@ -18,14 +18,14 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top" id="header-div">
+    <div class="sticky-top bg-vv-primary">
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-6 pt-2">
-                    (909)746-9872
+                    <p>(909)746-9872</p>
                 </div>
                 <div class="col-6 pt-2">
-                    Realtor with Capre
+                    <p>Realtor with Capre</p>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
     <!--Contact Section-->
 
     <!--Footer Section-->
-    <div id="footer-div" class="container-fluid">
+    <div class="container-fluid bg-vv-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
