added to the about me page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -60,8 +60,22 @@
     </div>
 
     <!--Hero Section-->
-    <div>
-        <h1>about</h1>
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
+            <div class="col-10 col-sm-8 col-lg-6">
+                <img src="portraitnormal.jpg" class="d-block mx-lg-auto img-fluid rounded-3" alt="Vanessa Vega Portrait"
+                    width="700" height="500" loading="lazy">
+            </div>
+            <div class="col-lg-6">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start color-secondary">
+                    Get to Know Me</h1>
+                <p>Phone Number: </p>
+                <p>Email: </p>
+                <p class="lead text-center text-lg-start">This is going to be an about me section that 
+                    will higlight stuff about you and we will right this later.
+                </p>
+            </div>
+        </div>
     </div>
     <!--Listing Section-->
 
