worked on adding shadows, on the about page, and the contact page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top bg-vv-primary">
+    <div class="sticky-top bg-vv-primary shadow-lg">
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-6 pt-2">
@@ -74,6 +74,9 @@
                 <p class="lead text-center text-lg-start">This is going to be an about me section that 
                     will higlight stuff about you and we will right this later.
                 </p>
+                <div class="d-grid gap-2 d-md-flex justify-content-center justify-content-lg-start">
+                    <a type="button" class="btn btn-vv-primary btn-lg px-4 me-md-2" href="/contact">Contact Me</a>
+                </div>
             </div>
         </div>
     </div>
