--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="/listings">Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact">Contact</a>
+                            <a id="active" class="nav-link" href="/contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -69,10 +69,10 @@
                 <img src="portraitnormal.jpg" class="d-block mx-lg-auto img-fluid rounded-circle"
                     alt="Vanessa Vega Portrait" width="500" height="300" loading="lazy">
             </div>
-            <div class="col-lg-6 d-flex-column justify-content-center">
+            <div class="col-lg-6 d-flex-column justify-content-center p-0">
                 <h3 class="display-7 fw-bold text-body-emphasis text-center lh-1 mb-3 text-lg-center color-secondary">
                     Vanessa Vega</h3>
-                <ul class="d-flex-column">
+                <ul class="d-flex-column justify-content-start">
                     <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
                             href="mailto:vanessavegakarina@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-envelope-fill mx-4" viewBox="0 0 16 16">
@@ -90,7 +90,7 @@
                             <p>(909)746-9872</p>
                         </a></li>
                     <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start" href="https://maps.app.goo.gl/r48CgSrUy6ZZFQbr8" ,
-                            target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 fill="currentColor" class="bi bi-house-fill mx-4" viewBox="0 0 16 16">
                                 <path
                                     d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
@@ -117,10 +117,10 @@
     <div class="container-fluid bg-vv-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="/about" class="nav-link px-2 text-body-secondary">About</a></li>
-                <li class="nav-item"><a href="/listings" class="nav-link px-2 text-body-secondary">Listings</a></li>
-                <li class="nav-item"><a href="/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
+                <li class="nav-item"><a href="/" class="nav-link px-2 color-vv-primary">Home</a></li>
+                <li class="nav-item"><a href="/about" class="nav-link px-2 color-vv-primary">About</a></li>
+                <li class="nav-item"><a href="/listings" class="nav-link px-2 color-vv-primary">Listings</a></li>
+                <li class="nav-item"><a href="/contact" class="nav-link px-2 color-vv-primary">Contact</a></li>
             </ul>
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
@@ -129,17 +129,17 @@
                             <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
                                 height="64px" width="64px">
                         </a>
-                        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Capre</span>
+                        <span class="mb-3 mb-md-0 color-vv-primary">© 2023 Capre</span>
                     </div>
 
                     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                        <li class="ms-3"><a class="text-body-secondary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
+                        <li class="ms-3"><a class="color-vv-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
                                     width="24" height="24" fill="currentColor" class="bi bi-envelope"
                                     viewBox="0 0 24 24">
                                     <path
                                         d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                                 </svg></a></li>
-                        <li class="ms-3"><a class="text-body-secondary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
+                        <li class="ms-3"><a class="color-vv-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
                                     width="24" height="24" fill="currentColor" class="bi bi-instagram"
                                     viewBox="0 0 24 24">
                                     <path
