--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -18,32 +18,34 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top bg-vv-primary shadow-lg">
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div class="col-6 pt-2">
-                    <p>(909)746-9872</p>
-                </div>
-                <div class="col-6 pt-2">
-                    <p>Realtor with Capre</p>
-                </div>
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-md shadow">
+    <div class="sticky-top shadow-lg" id="header">
+        <nav class="navbar navbar-expand-md shadow p-0">
 
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="/">
-                    <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG" height="64px"
-                        width="64px">
-                    <h2>Vanessa Vega</h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <div class="container-fluid p-0">
+                <div class="bg-vv-primary shadow-lg" id="header-main">
+                    <div class="px-3">
+                        <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
+                            href="/">
+                            <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
+                                height="64px" width="64px">
+                            <h2>Vanessa Vega</h2>
+                        </a>
+                    </div>
+                    <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
+                        <p>DRE 02227468</p>
+                        <p>(909)746-9872</p>
+                    </div>
+
+                </div>
+
+                <button class="navbar-toggler navbar-dark mx-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end align-items-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
+                    id="navbarSupportedContent">
+                    <ul class="navbar-nav ">
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
@@ -51,7 +53,7 @@
                             <a class="nav-link" href="/listings">Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a id="active" class="nav-link" href="/contact">Contact</a>
+                            <a class="nav-link" id="active" href="/contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -74,24 +76,26 @@
                     Vanessa Vega</h3>
                 <ul class="d-flex-column justify-content-start">
                     <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
-                            href="mailto:vanessavegakarina@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            href="mailto:vanessavegakarina@gmail.com" target="_blank"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-envelope-fill mx-4" viewBox="0 0 16 16">
                                 <path
                                     d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z" />
                             </svg>
                             <p>vanessavegakarina@gmail.com</p>
                         </a></li>
-                    <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start" href="tel:909-746-9872"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-telephone-fill mx-4" viewBox="0 0 16 16">
+                    <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
+                            href="tel:909-746-9872"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-telephone-fill mx-4" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
                                     d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                             </svg>
                             <p>(909)746-9872</p>
                         </a></li>
-                    <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start" href="https://maps.app.goo.gl/r48CgSrUy6ZZFQbr8" ,
-                            target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                fill="currentColor" class="bi bi-house-fill mx-4" viewBox="0 0 16 16">
+                    <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
+                            href="https://maps.app.goo.gl/r48CgSrUy6ZZFQbr8" , target="_blank"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                class="bi bi-house-fill mx-4" viewBox="0 0 16 16">
                                 <path
                                     d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
                                 <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
@@ -99,11 +103,14 @@
                             <p>28200 Hwy 189, Bldg G Lake Arrowhead, CA 92352</p>
                         </a></li>
                     <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
-                            href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
-                                width="16" height="16" fill="currentColor" class="bi bi-instagram mx-4" viewBox="0 0 16 16">
+                            href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr"
+                            target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-instagram mx-4" viewBox="0 0 16 16">
                                 <path
                                     d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
-                            </svg><p>@karinavanessaa_</p></a></li>
+                            </svg>
+                            <p>@karinavanessaa_</p>
+                        </a></li>
                 </ul>
 
             </div>
