--- a/src/pages/listings.html
+++ b/src/pages/listings.html
@@ -18,37 +18,39 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top bg-vv-primary shadow-lg">
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div class="col-6 pt-2">
-                    <p>(909)746-9872</p>
-                </div>
-                <div class="col-6 pt-2">
-                    <p>Realtor with Capre</p>
-                </div>
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-md shadow">
+    <div class="sticky-top shadow-lg" id="header">
+        <nav class="navbar navbar-expand-md shadow p-0">
 
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="/">
-                    <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG" height="64px"
-                        width="64px">
-                    <h2>Vanessa Vega</h2>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <div class="container-fluid p-0">
+                <div class="bg-vv-primary shadow-lg" id="header-main">
+                    <div class="px-3">
+                        <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
+                            href="/">
+                            <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
+                                height="64px" width="64px">
+                            <h2>Vanessa Vega</h2>
+                        </a>
+                    </div>
+                    <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
+                        <p>DRE 02227468</p>
+                        <p>(909)746-9872</p>
+                    </div>
+
+                </div>
+
+                <button class="navbar-toggler navbar-dark mx-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end align-items-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
+                    id="navbarSupportedContent">
+                    <ul class="navbar-nav ">
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a id="active" class="nav-link" href="/listings">Listings</a>
+                            <a class="nav-link" id="active" href="/listings">Listings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contact">Contact</a>
