--- a/src/pages/listings.html
+++ b/src/pages/listings.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md shadow p-0">
 
             <div class="container-fluid p-0">
-                <div class="bg-vv-primary shadow-lg" id="header-main">
+                <div id="header-main">
                     <div class="px-3">
                         <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
                             href="/">
@@ -62,8 +62,8 @@
     </div>
 
     <!--Hero Section-->
-    <div>
-        <h1>No listings</h1>
+    <div class="text-center" style="height: 600px;">
+        <h1 class="py-4">No listings</h1>
     </div>
     <!--Listing Section-->
 
