adding background to header text and email and phone number in about page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,17 +23,20 @@
 
             <div class="container-fluid p-0">
                 <div id="header-main">
-                    <div class="px-3">
-                        <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
-                            href="/">
-                            <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
-                                height="64px" width="64px">
-                            <h2>Vanessa Vega</h2>
-                        </a>
-                    </div>
-                    <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
-                        <p>DRE 02227468</p>
-                        <p>(909)746-9872</p>
+                    <div class="bg-black w-75 m-2 pb-2 bg-opacity-75 rounded">
+                        <div class="px-3">
+                            <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
+                                href="/">
+                                <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
+                                    height="64px" width="64px">
+                                <h2>Vanessa Vega</h2>
+                            </a>
+                        </div>
+                        <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
+                            <p>DRE 02227468</p>
+                            <p>(909)746-9872</p>
+                        </div>
+
                     </div>
 
                 </div>
@@ -45,17 +48,20 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
                     id="navbarSupportedContent">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" id="active" href="/about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/listings">Listings</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact">Contact</a>
-                        </li>
-                    </ul>
+                    <div class="bg-black p-2 bg-opacity-75 rounded">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/listings">Listings</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </nav>
@@ -71,8 +77,8 @@
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start color-secondary">
                     Get to Know Me</h1>
-                <p>Phone Number: </p>
-                <p>Email: </p>
+                <p>Phone Number: (909)746-9872</p>
+                <p>Email: vanessavegakarina@gmail.com</p>
                 <p class="lead text-center text-lg-start">
                     I am so excited to share with you all the BIG NEWS! I am a Real Estate Agent! I have recently
                     joined the amazing team at CAPRE. I thought I would take this time to introduce myself!
