--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanessa Vega</title>
+    <link rel="icon" type="image/x-icon" href="/Logo_Capre_blk_and_gold__1_-removebg-preview.PNG">
+    <meta property="og:title" content="Vanessa Vega Real Estate">
+    <meta property="og:description" content="Turning the Key to Your Future">
+    <meta property="og:image" content="/Logo_Capre_blk_and_gold__1_-removebg-preview.PNG">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,8 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -23,12 +26,12 @@
 
             <div class="container-fluid p-0">
                 <div id="header-main">
-                    <div class="bg-black w-75 m-2 pb-2 bg-opacity-75 rounded">
+                    <div class="bg-black container-fluid m-2 pb-2 bg-opacity-75 rounded rounded-end-5">
                         <div class="px-3">
                             <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
                                 href="/">
                                 <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
-                                    height="64px" width="64px">
+                                    height="96px" width="96px">
                                 <h2>Vanessa Vega</h2>
                             </a>
                         </div>
@@ -51,7 +54,7 @@
                     <div class="bg-black p-2 bg-opacity-75 rounded">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
-                                <a class="nav-link" href="/about">About</a>
+                                <a class="nav-link active text-white" aria-current="page" href="/about">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/listings">Listings</a>
