--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -83,7 +83,7 @@
                 <p>Phone Number: (909)746-9872</p>
                 <p>Email: vanessavegakarina@gmail.com</p>
                 <p class="lead text-center text-lg-start">
-                    I am so excited to share with you all the BIG NEWS! I am a Real Estate Agent! I have recently
+                    I am so excite to share with you all the BIG NEWS! I am a Real Estate Agent! I have recently
                     joined the amazing team at CAPRE. I thought I would take this time to introduce myself!
                     My name is Vanessa Vega. I am an alumni from CSUSB where I received my bachelors in Business Admin
                     with a concentration in Real Estate. I also love helping people making their home the home of their
