Changed one of the locations and added 6 new listings

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -21,7 +21,7 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top shadow-lg" id="header">
+    <div class="shadow-lg" id="header">
         <nav class="navbar navbar-expand-md shadow p-0">
 
             <div class="container-fluid p-0">
